Inclusao Favicon e link readme

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="shortcut icon"
+      href="./public/images/iceCreamLogo.svg"
+      sizes="32x32"
+      type="image/svg"
+    />
   </head>
   <body>
     <header>
