Inclusao link readme

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <img src="./public/images/iceCream4.png" alt="Sorvetes de Picolé" />
           <figcaption>Picolés</figcaption>
         </figure>
+        <a target="_blank" href=""></a>
       </div>
     </main>
   </body>
